--- a/index.html
+++ b/index.html
@@ -3,7 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nomen.im</title>
+
+    <!-- === 1. Primary Meta Tags === -->
+    <title>nomen.im | A Ceremony for Your Name</title>
+    <meta name="title" content="nomen.im | A Ceremony for Your Name">
+    <meta name="description" content="A simple, interactive ceremony to reflect on the meaning and power of your name, reminding you that it is a masterpiece.">
+    <meta name="keywords" content="name, identity, meaning of name, self-reflection, interactive experience, personal story, what is my name">
+    <meta name="author" content="nomen.im (An unearth.im Project)">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    
+    <!-- === Canonical Link === -->
+    <link rel="canonical" href="https://nomen.im/" />
+ 
+    <!-- === 2. Webmention Endpoint === -->
+    <link rel="webmention" href="https://webmention.io/unearth.im/webmention" />
+
+    <!-- === 3. Open Graph / Facebook === -->
+    <meta property="og:type" content="website"> 
+    <meta property="og:url" content="https://nomen.im/">
+    <meta property="og:title" content="nomen.im | A Ceremony for Your Name">
+    <meta property="og:description" content="A simple, interactive ceremony to reflect on the meaning and power of your name, reminding you that it is a masterpiece.">
+    <meta property="og:image" content="https://nomen.im/og-image.png">
+    <meta property="og:site_name" content="nomen.im">
+
+    <!-- === 4. Twitter Card === -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://nomen.im/">
+    <meta property="twitter:title" content="nomen.im | A Ceremony for Your Name">
+    <meta property="twitter:description" content="A simple, interactive ceremony to reflect on the meaning and power of your name, reminding you that it is a masterpiece.">
+    <meta property="twitter:image" content="https://nomen.im/og-image.png">
+
+    <!-- === 5. Favicons & Theme === -->
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link rel="alternate icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <meta name="theme-color" content="#0A0E1B">
+    <meta name="msapplication-TileColor" content="#FF8A00">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
@@ -280,4 +318,3 @@
     </script>
 </body>
 </html>
-
