--- a/index.html
+++ b/index.html
@@ -209,13 +209,16 @@
             const container = document.getElementById('container');
 
             const affirmations = [
-                "It is the first gift you are given.", "It is a sound that means 'you'.", "It is a thread in a story.",
-                "It is a word with a heartbeat.", "It is the anchor of your identity.", "It is the title of your story.",
-                "It is a promise whispered at birth.", "It is the first word you owned.", "It is a bridge to your ancestors.",
-                "It is a map of your becoming.", "It is a song only you can hear.", "It is a vessel for your legacy.",
-                "It is a signature on the world.", "It is the beginning of your poem.", "It is a key to being known.",
-                "It is a constellation of letters.", "It is a single word, holding worlds.", "It is the echo of your existence.",
-                "It is a word spoken with love.", "It is a name for a masterpiece: you."
+                "It is the first gift you are given.", "It is a sound that means 'you'.", "It is a thread in a story.", 
+                "It is a word with a heartbeat.", "It is the anchor of your identity.", "It is the title of your story.", 
+                "It is a promise whispered at birth.", "It is the first word you owned.", "It is a bridge to your ancestors.", 
+                "It is a map of your becoming.", "It is a song only you can hear.", "It is a vessel for your legacy.", 
+                "It is a signature on the world.", "It is the beginning of your poem.", "It is a key to being known.", 
+                "It is a constellation of letters.", "It is a single word, holding worlds.", "It is the echo of your existence.", 
+                "It is a word spoken with love.", "It is a spell for summoning yourself.", "It is the first piece of your personal myth.", 
+                "It is a sound that shapes the air.", "It is a word that carries your history.", "It is the handle by which the world holds you.", 
+                "It is a seed planted in the soil of your life.", "It is a quiet hum beneath all you do.", "It is a word that holds your potential.", 
+                "It is a banner flown from the castle of your self.", "It is a name for a masterpiece: you."
             ];
 
             let isSubmitted = false;
